--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,9 @@
+/* Users Show Page Styles */
+.user-show-avatar {
+  width: 128px;
+  height: 128px;
+}
+
 .job-title-icon {
   display: inline-block;
   width: 30px;
@@ -26,7 +32,11 @@
   border-color: #46b8da;
 }
 
-.avatar {
-  width: 150px;
-  height: 150px;
+/* Users Index Page Styles */
+.user-index-avatar {
+  border-radius: 50%;
+}
+
+.well.white-bg {
+  background-color: white;
 }
